# nit

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: MIGRATION_CHECKLIST.md
scripts/: migrate-from-chezmoi-restage.sh  migrate-from-chezmoi.sh
src/: bootstrap.rs  config.rs  encrypt.rs  git.rs  main.rs  permissions.rs  pick.rs  sync_status.rs  syncbase.rs  template.rs  trigger.rs
