[package]
name = "nit"
version = "0.1.0"
edition = "2024"
description = "AI-era dotfiles manager — git's rivet"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
sha2 = "0.10"
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tera = "1"
hex = "0.4"
glob = "0.3"
age = { version = "0.11", features = ["armor"] }
hostname = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
strip = true
